@startuml CLASSES_PARTICIPANTES_PRISE_EN_CHARGE
title "Classes participantes — Prise en charge médicale"

skinparam classAttributeIconSize 0

class Medecin <<actor>>

class ConsultationDetailView <<boundary>> {
  - consultationId : Long
  - timeline : List~ConsultationEventResponse~
  - diagnosticDiseaseType : String
  - diagnosticDiseaseName : String
  --
  + loadData() : void
  + submitDiagnostic() : void
  + submitPrescription() : void
  + toggleTimelineSort(column) : void
}

class ConsultationBffController <<boundary>> {
  - clinicalRecordClient : ClinicalRecordClient
  --
  + list(patientId, admissionId, page) : Page~ConsultationResponse~
  + getById(id) : ConsultationResponse
  + create(request) : ConsultationResponse
  + consultationEvents(id) : List~ConsultationEventResponse~
  + addDiagnostic(id, request) : ConsultationEventResponse
}

class DiseaseCatalogBffController <<boundary>> {
  - clinicalRecordClient : ClinicalRecordClient
  --
  + listSelectable(diseaseType) : List~DiseaseCatalogResponse~
}

class PrescriptionBffController <<boundary>> {
  - clinicalRecordClient : ClinicalRecordClient
  --
  + create(patientId, request) : PrescriptionResponse
}

class ConsultationController <<boundary>> {
  - consultationService : ConsultationService
  --
  + list(...) : Page~ConsultationResponse~
  + getById(consultationId) : ConsultationResponse
  + consultationEvents(consultationId) : List
  + create(request) : ConsultationResponse
  + addObservation(id, request) : ConsultationEventResponse
  + addDiagnostic(id, request) : ConsultationEventResponse
  + addExamOrder(id, request) : ConsultationEventResponse
}

class ConsultationService <<control>> {
  - consultationRepository : ConsultationRepository
  - consultationEventRepository : ConsultationEventRepository
  - medicalRecordRepository : MedicalRecordRepository
  - patientServiceClient : PatientServiceClient
  - careEntryServiceClient : CareEntryServiceClient
  - diseaseCatalogService : DiseaseCatalogService
  - auditEventPublisher : AuditEventPublisher
  --
  + list(...) : Page~ConsultationResponse~
  + getById(consultationId) : ConsultationResponse
  + create(request, username, authHeader) : ConsultationResponse
  + consultationEvents(consultationId) : List
  + patientTimeline(patientId) : List
  + addObservation(id, request, username) : ConsultationEventResponse
  + addDiagnostic(id, request, username) : ConsultationEventResponse
  + addExamOrder(id, request, username) : ConsultationEventResponse
}

class DiseaseCatalogService <<control>> {
  - diseaseCatalogRepository : DiseaseCatalogRepository
  --
  + listSelectable(diseaseType) : List~DiseaseCatalogResponse~
  + recordUsage(diseaseType, diseaseName) : void
  + {static} normalizeLabel(label) : String
}

class Consultation <<entity>> {
  - id : Long
  - patientId : Long
  - admissionId : Long
  - doctorName : String
  - reason : String
  - consultationDateTime : Instant
  --
  + getId() : Long
  + getPatientId() : Long
}

class ConsultationEvent <<entity>> {
  - id : Long
  - consultation : Consultation
  - patientId : Long
  - eventType : ConsultationEventType
  - content : String
  - diseaseType : String
  - diseaseName : String
  - createdAt : Instant
}

class DiseaseCatalog <<entity>> {
  - id : Long
  - diseaseType : String
  - label : String
  - labelNormalized : String
  - usageCount : int
  - firstUsedAt : Instant
  - lastUsedAt : Instant
  --
  + isSelectable() : boolean
}

class PrescriptionLine <<entity>> {
  - id : Long
  - drugName : String
  - dosage : String
  - frequency : String
  - status : String
}

Med "1" --> "1" ConsultationDetailView : association
ConsultationDetailView "1" --> "1" ConsultationBffController : association
ConsultationDetailView "1" --> "1" DiseaseCatalogBffController : association
ConsultationDetailView "1" --> "1" PrescriptionBffController : association
ConsultationBffController "1" --> "1" ConsultationController : association
ConsultationController "1" --> "1" ConsultationService : association
ConsultationService "1" --> "0..*" Consultation : association
ConsultationService "1" --> "0..*" ConsultationEvent : association
ConsultationService "1" --> "1" DiseaseCatalogService : association
DiseaseCatalogService "1" --> "0..*" DiseaseCatalog : association

legend right
--
  **Relations** : association (--) · dependency (..>)
  Multiplicities on each link
endlegend

@enduml
